--- a/client/src/features/login/pages/LoginPage.module.css
+++ b/client/src/features/login/pages/LoginPage.module.css
@@ -3,10 +3,11 @@
     flex-direction: column;
     align-items: center;
     width: 400px;
+    max-width: calc(100vw - var(--page-margin) * 2 - var(--content-padding) * 2);
     border-radius: 8px;
     background-color: var(--color-overlay-background);
-    padding: 24px;
-    margin-top: 15vh;
+    padding: var(--content-padding);
+    /*margin-top: 15vh;*/
     margin-left: auto;
     margin-right: auto;
     gap: 24px;
